# aiquant

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.cursor/: mcp.json
aiquant/: __init__.py  config.py
aiquant/data/: dataset.py  features.py  fetcher.py  indicators.py  preprocessing.py  symbols.py  zigzag.py
aiquant/evaluation/: evaluator.py  visualization.py
aiquant/models/transformer_trend/: __init__.py  attention.py  config.py  encoder.py  model.py  positional.py
aiquant/training/: checkpoint.py  metrics.py  trainer.py
aiquant/utils/: reproducibility.py
scripts/: evaluate_model.py  fetch_data.py  train_model.py
tests/test_data/: test_preprocessing.py  test_zigzag.py
tests/test_models/: test_attention.py  test_model.py
tests/test_training/: test_metrics.py
