[project]
name = "aiquant"
version = "0.1.0"
description = "量化交易系统 - 基于注意力机制的股票趋势预测"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ibkr-mcp",
    "ib_async",
    "ta-lib>=0.6.8",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyarrow>=14.0",
    "tqdm>=4.65",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.uv.sources]
ibkr-mcp = { path = "../ibkr_mcp", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require network or TWS connection",
]
